2007-02-24  Clark Williams  <williams@redhat.com>

	* mock.spec
	BZ#226673 - Ville Skyttä fix for RPM_OPT_FLAGS

2007-02-20  Clark Williams  <williams@redhat.com>

	* mock.py
	Handle --no-clean option when doing yum.conf symlink
	
	* mock.spec 
	Bumped version to 0.6.13

2007-02-16  Clark Williams  <williams@redhat.com>

	* mock.py
	Added safety symlink to handle possible yum breakage in rawhide

2007-02-07  Clark Williams  <williams@redhat.com>

	* mock.py
	Added error() calls to print command output on failed commands

2007-02-06  Clark Williams  <williams@redhat.com>

	* mock.py
	added installdeps command for long-term chroot management
	fixed invalid reference to os.file (rather than os.path)
	
2007-01-08  Clark Williams  <williams@redhat.com>
	* Makefile
	changed archive creation to keep tarball clean

	* etc/fedora-4-*
	added Josh Boyer's EPEL config files

	* mock.spec
	bumped version to 0.6.10
	
2006-10-30  Clark Williams  <williams@redhat.com>

	* Makefile
	Bumped version to 0.6.7 for FC6 release

	* etc/fedora-6-*
	Added for FC6 release

2006-10-21  Clark Williams  <williams@redhat.com>

	* mock.spec
	Bumped version to 0.6.6

2006-09-11 11:21  jcwillia
	* mock.py
	added patch from Karanbir Singh to fix RPM problem in 
	CentOS 4.4

	* mock.spec
	bumped version to 0.6.5

2006-08-29 05:16  jcwillia

	* mock.py
	explicit import of rpmUtils.transaction 
	(BZ#204051)

2006-08-25 16:40  jcwillia

	* buildsys-build.spec
	Dennis Gilmore's patches for Aurora SPARC Linux 
	(BZ#204100)
	
2006-08-17 20:28  jcwillia
	
	* etc/redhat-73-i386.cfg, etc/redhat-9-i386.cfg:
	added runuser config option for legacy config files
	
	* mock.py
	updated usage message
	
	* doc/mock.1
	reworked man page to include caching options, chroot and shell
	commands. 
	(BZ#200080)

2006-08-17 20:23  jcwillia
	
	* etc/redhat-8-i386.cfg:
	added template for RHL8
	
2006-08-16 16:59  jcwillia

	* mock.spec
	added disttags
	
	* mock.py